--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -1,7 +1,17 @@
 \label{detbeamtest}
+
+The primary goal of DUNE  is to measure the disappearance rate of muon neutrinos and muon anti-neutrinos and the corresponding appearance rate of electron neutrinos and electron anti-neutrinos over the 1300~km baseline of the experiment. Precise measurement of this
+phenomenon would allow for determination of the mass ordering of the three mass eigenstates and could potentially lead to the discovery of CP violation in the lepton sector through the measurement of the
+CP violation phase, $\delta_{CP}$, which may connect to the dominance of matter
+over antimatter in the universe. Other important physics goals include sensitive searches for proton decay and detection of supernova neutrinos.
+
+
+The full power of the DUNE experiment to perform a careful test of the three-flavor paradigm will come from a measurement of the detected neutrino spectral shape over a broad energy range.  For a baseline of 1300~km the first maximum of the oscillation probability occurs in the 2 - 3~GeV energy range with additional oscillation maxima at lower energies so the high intensity neutrino flux must be maximized in this energy range. It is desirable to have sufficient flux in the sub-GeV energy range to enable a measurement of the rapidly changing spectral shape in the region of the second maximum in the oscillation probability. It is this requirement on the neutrino energy spectrum, and the subsequent energy range of charged particles that result from their interactions, that determines the performance requirements for the DUNE detectors.
+
+
 One of the main goals of the single-phase prototype test beam program is to perform measurements 
 needed to control and understand systematic uncertainties in DUNE oscillation measurements.
-The program also includes measurements to support other important DUNE physics measurements as described below.
+%The program also includes measurements to support other important DUNE physics measurements as described below.
 %detector is intended to provide input necessary to reduce systematic uncertainties for oscillation measurements 
 %
 
@@ -44,26 +54,30 @@ Solid curves show the effect of -5\% lepton energy scale shift on the
 measured appearance $\nu_e$ and $\overline{\nu}_e$ signals assuming $\delta_{CP}=0$.
 The crosses show the expected signal shape for $\delta_{CP}=+\pi/2$ (lower crosses) and -$\pi/2$  (upper crosses). 
 Ratios show the distortion on the $\nu_e$ and $\overline{\nu}_e$ spectra due to the 
-5\% energy scale shift. 
+5\% energy scale shift.
 }
 \end{figure}
 
 
  Fig.~\ref{fig:global_escale_sens} taken from Ref.~\cite{dunecdr} demonstrates that
-energy scale uncertainties will affect DUNE 
+energy scale uncertainties will impact DUNE 
 %shows the effect of 
 %three values of neutrino energy scale uncertainty on the DUNE 
-mass hierarchy and $\delta_{CP}$ sensitivities.
+mass hierarchy (left) and $\delta_{CP}$ (right) sensitivities.
 The exposure to achieve this level of sensitivity corresponds to 
 %The nominal sensitivity assumes a
  230-400 kt-MW-years for mass hierarchy and  850-1320 kt-MW-years for CPV depending on the 
 details of the LBNF neutrino beam design.
 %exposure with equal neutrino and antineutrino running. 
-Work to evaluate the effect of all systematic uncertainties in DUNE sensitivities is still in progress. 
-This example assumes only a linear neutrino energy scale variation and does not consider more
-complex (and more likely) scenarios or include correlations and background effects. 
-It therefore likely underestimates the probable effects  of particle energy reconstruction 
-on DUNE sensitivities.
+Work to evaluate the effect of all systematic uncertainties in DUNE sensitivities is still in progress.
+This study already indicates a signficant reduction of the CPV peak sensitivity. 
+This example assumes linear neutrino energy scale variations at the levels indicated.
+More complex (and more likely) scenarios for energy scale uncertainties are under study and
+will likely result in larger effects on the sensitivities.
+%including separate particle
+% correlated variations 
+%It therefore likely underestimates the probable effects  of particle energy reconstruction 
+%on DUNE sensitivities.
 %The size of effects shown here do not account for correlated uncertainties in neutrino and 
 %antineutrino running or effects on backgrounds and is therefore likely
 %a best-case scenario. 
@@ -74,11 +88,14 @@ on DUNE sensitivities.
 %\includegraphics[width=0.49\textwidth,height=6.7cm]{figures/mh_escale_sens}
 %\includegraphics[width=0.49\textwidth,height=6.7cm]{figures/deltacp_escale_sens}
 \label{fig:global_escale_sens}
-  \caption{DUNE projected sensitivity dependence of mass hierarchy (left) and $\delta_{CP}$ 
-(right) to neutrino energy scale uncertainties. 
-If energy scale uncertainties can be controlled at the appropriate levels, DUNE can achieve 
-at least 5$\sigma$ sensitivity on mass hierarchy determination for 100\% of $\delta_{CP}$ values and
-for 3$\sigma$ sensitivity to  $\delta_{CP}$ for 75\% coverage of phase space.
+  \caption{One scenario for the effect of 1-sigma  neutrino energy scale uncertainties on
+DUNE projected sensitivity for mass hierarchy (left) and $\delta_{CP}$ 
+(right).
+A 115 kt-MW-years exposure in each of neutrino and antineutrino modes is assumed.
+% to one sigma neutrino energy scale uncertainties as indicated.
+%If energy scale uncertainties can be controlled at the appropriate levels, DUNE can achieve 
+%at least 5$\sigma$ sensitivity on mass hierarchy determination for 100\% of $\delta_{CP}$ values and
+%for 3$\sigma$ sensitivity to  $\delta_{CP}$ for 75\% coverage of phase space.
 }
 \end{figure}
 
