Replacing EHN1 drawing

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -40,8 +40,8 @@ The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile
   Beam Divergence & tbd   \\ \hline
   Beam Angle &  $\approx$10$^{\circ}$ \\
   (horizontal plane) &  (w.r.t. the long axis of the cryostat)\\ \hline
-  Beam Dip Angle &  $\approx$6$^\circ$ (downward)   \\ 
-  (vertical plane) & (w.r.t. the longitudinal beam axis) \\ \hline
+  Beam Dip Angle &  $\approx$6$^\circ$ (downward from horizontal)   \\ 
+  (vertical plane) &  \\ \hline
   Beam Entrance Position & Multiple beam windows    \\ \hline
   Rates & 200 Hz (maximum)    \\ \hline
 \end{tabular}
@@ -50,12 +50,12 @@ The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile
 \end{table}
 
 \subsection{EHN1 H4ext Beamline}
-The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot. The cryostat in the upper left is for the WA105 Collaboration.
+The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot (in the H4 beam line). The cryostat in the H2 beam line is for the WA105 Collaboration.
 
 \begin{figure}[h]
   \centering
-\includegraphics[scale=0.7]{figures/EHN1Ext_Prelim.jpg}
-  \caption{A conceptual layout of the H4ext beamline. The liquid argon cryostat for this proposal is the box with a red cross in the lower right corner.  }
+\includegraphics[scale=0.3]{figures/EHN1Ext_Prelim2.jpg}
+  \caption{A conceptual layout of the H4ext beamline. The liquid argon cryostat for this proposal is the rotated rectangular box in the lower right hand corner.  }
   \label{fig:H4extPrelim}
 \end{figure}
 
@@ -70,7 +70,7 @@ Beam instrumentation provides important information about the characteristics of
 The beam position detector measures the positions of the particle as it traverses the detector. Two detector technologies are under considerations: wire chambers and scintillating fiber trackers. For the nominal setup, one beam position detector is installed upstream and another one downstream of the last bending magnet. This pair provides additional momentum information about the particles as well as the first set of position measurements. Without tracking information, the momentum spread of the beam is expected to be at around 5\% based on the acceptance of the dipole magnets. With additional tracking information, we are likely to be able to measure the momentum of the individual particles to close to one percent level. A third beam position detector is placed right in front of the beam window on the cryostat wall to provide the last position information before the beam enters the cryostat.
 
 \subsubsection{Particle Identification}
-In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover the lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles. We will require $\geq$ 3$\sigma$ $K$/$\pi$ separation for momentum range from 0.2 to a few GeV/c. We are aiming to have samples of $\pi$'s and $K$'s with purity better than 95\%. Work is in progress to better define the beamline layout to meet these requirements.
+In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover the lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles. We will require $\geq$ 3$\sigma$ $K$/$\pi$ separation for momentum range from 0.2 to a few GeV/c. Work is in progress to better define the beamline layout to meet the requirements.
 
 \subsubsection{Muon Beam Halo Counters}
 The halo counter is a set of plastic scintillator paddles surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events. The Muon Beam Halo counter can be a subset of the cosmic muon veto system. 
