Updating text on muon beam halo counter

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -73,7 +73,7 @@ The beam position detector measures the positions of the particle as it traverse
 In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover the lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles. We will require $\geq$ 3$\sigma$ $K$/$\pi$ separation for momentum range from 0.2 to a few GeV/c. Work is in progress to better define the beamline layout to meet the requirements.
 
 \subsubsection{Muon Beam Halo Counters}
-The halo counter is a set of plastic scintillator paddles surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events. The Muon Beam Halo counter can be a subset of the cosmic muon veto system. 
+The muon beam halo counters is a set of detectors (e.g. plastic scintillator paddles) surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events. The Muon Beam Halo counter can be a subset of the cosmic muon veto system. 
 
 %\subsection{Beam Window on LAr Cryostat}
 %This section could be absorbed into the cryostat chapter.
