--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -1,12 +1,17 @@
 \label{detbeamtest}
 
-The primary goal of DUNE  is to measure the disappearance rate of muon neutrinos and muon anti-neutrinos and the corresponding appearance rate of electron neutrinos and electron anti-neutrinos over the 1300~km baseline of the experiment. Precise measurement of this
-phenomenon would allow for determination of the mass ordering of the three mass eigenstates and could potentially lead to the discovery of CP violation in the lepton sector through the measurement of the
-CP violation phase, $\delta_{CP}$, which may connect to the dominance of matter
-over antimatter in the universe. Other important physics goals include sensitive searches for proton decay and detection of supernova neutrinos.
+The primary goals of DUNE are to 
+constrain or discover CP violation in the lepton sector by determining 
+the value of the
+CP violating phase, $\delta_{CP}$, in the PMNS mixing matrix and
+to determine the mass ordering of the three neutrino mass eignestates. 
+This will be accomplished through measurement of 
+appearance rate of electron neutrinos and electron anti-neutrinos 
+as well as the corresponding disappearance rate of muon neutrinos 
+and muon anti-neutrinos over the 1300~km baseline of the experiment. 
+Other important physics goals include sensitive searches for proton decay and detection of supernova neutrinos.
 
-
-The full power of the DUNE experiment to perform a careful test of the three-flavor paradigm will come from a measurement of the detected neutrino spectral shape over a broad energy range.  For a baseline of 1300~km the first maximum of the oscillation probability occurs in the 2 - 3~GeV energy range with additional oscillation maxima at lower energies so the high intensity neutrino flux must be maximized in this energy range. It is desirable to have sufficient flux in the sub-GeV energy range to enable a measurement of the rapidly changing spectral shape in the region of the second maximum in the oscillation probability. It is this requirement on the neutrino energy spectrum, and the subsequent energy range of charged particles that result from their interactions, that determines the performance requirements for the DUNE detectors.
+The full power of the DUNE experiment to perform a careful test of the three-flavor paradigm will come from a measurement of the detected neutrino spectral shape over a broad energy range.  For a baseline of 1300 km the first maximum of the oscillation probability occurs in the 2 - 3 GeV energy range with additional oscillation maxima at lower energies so the high intensity neutrino flux must be maximized in this energy range. It is desirable to have sufficient flux in the sub-GeV energy range to enable a measurement of the rapidly changing spectral shape in the region of the second maximum in the oscillation probability. It is this requirement on the neutrino energy spectrum, and the subsequent energy range of charged particles that result from their interactions, that determines the performance requirements for the DUNE detectors. 
 
 
 One of the main goals of the single-phase prototype test beam program is to perform measurements 
