edits to pion cross section/egamma and intro

--- a/bibliography.tex
+++ b/bibliography.tex
@@ -28,6 +28,8 @@ Phys. Rev. D 83, 052007 (2011).
 \bibitem{minervafsi} Charged Pion Production in Interactions on Hydrocarbon 
 at $\overline{E}$= 4.0 GeV'', B. Eberly et. al., \url{http://arxiv.org/abs/1503.01520}.
 
+\bibitem{genie} for example GENIE, ``The GENIE Neutrino Monte Carlo Generator'', C. Andreopoulos, et al., Nucl. Instrum. Meth. A614, 87 (2010).
+
 \bibitem{fsirev} see for example review article ``Pion-nucleus Interactions'',
 T.~S.~H. Lee and R. P. Redwine, Ann. Rev. Nucl. Sci,  {\bf 52}, 23 (2002).
 
