--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -387,11 +387,13 @@ for interacting $\pi^+$ versus $\pi^-$ ranging from 0.2~GeV/c up to 5~GeV/c.
 Final state pions are produced copiously in neutrino interactions in our energy range 
 of interest
 and contribute substantially to total visible energy in the interaction.
-These particles can re-interact or be absorbed in the nuclear medium
+These particles can re-interact either in the nuclear medium or after emerging from the target nucleus
 and substantially change the visible energy deposited in the event. 
-Effects of modeling final state pion interactions on reconstructed neutrino energy have 
+The importance of modeling final state pion interactions on reconstructed neutrino energy have 
 been recently demonstrated in the NuMI and Booster beam energy ranges~\cite{miniboonefsi, minervafsi}. 
 
+Detailed knowledge of pion-nucleus cross sections in the sub-GeV energy range is required
+to tune generators~\cite{genie} to accurately model event visible energy. 
 Existing data used to tune the models
 cover limited energies ($<$200~MeV) and are primarily on lighter target nuclei~\cite{fsirev}.
 % need to check this reference from R. Ransom talk.
@@ -591,9 +593,12 @@ from the energy deposition pattern.
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/eff-bgdrej-diffen}
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/APAT600_all_norm}
   \caption{
- (left) Background rejection versus signal efficiency for various energies, calculated for sample which pass the reconstruction. Simulation performed in APA design configuration (4.67~mm wire pitch, Induction wires at $\pm$35.7$^{\circ}$ w.r.t. Collection wires). (right) Background rejection versus signal efficiency
-integrated over the energy range 0.2-1.0 GeV for two different readout designs: APA parameters as on the left plot, ICARUS parameters: 3~mm wire pitch, Induction wires at $\pm$60$^{\circ}$ w.r.t. Collection wires. 
-Background rejection and signal selection efficiency values normalized to the full data sample size, including events which do not pass reconstruction.
+ (left) Photon backgroun rejection % Background rejection 
+versus electron identification efficiency for various energies, calculated for sample which pass the reconstruction. 
+%The background is due to mid-identified photons.
+The simulation was performed in APA design configuration (4.67~mm wire pitch, induction wires at $\pm$35.7$^{\circ}$ w.r.t. collection wires). (right) Photon background rejection versus electron identification efficiency
+integrated over the energy range 0.2-1.0 GeV for two different readout designs: APA parameters as on the left plot, ICARUS parameters: 3~mm wire pitch, induction wires at $\pm$60$^{\circ}$ w.r.t. collection wires. 
+Rejection and efficiency values are normalized to the full data sample size, including events which do not pass reconstruction.
 %(Left)Background rejection versus signal efficiency for various energies.
 %{\color{red}
 %}
@@ -607,17 +612,16 @@ Electron-photon separation has been studied in LAr TPCs
 %Currently the 
 %separation efficiency is estimated to be at the level of of 95 \% (?) 
 Fig.~\ref{fig:egam} (from ~\cite{dunecdr})
- shows estimated background rejection versus efficiency using 
+ shows estimated photon background rejection versus electron identification efficiency using 
 simulated isotropic electron and photon event samples  with the 
 APA geometry configuration.
 % and propagated thorough the 
 %event reconstruction chain 
-Background rejection as a function of signal
-selection efficiency depends mildly
+The results are found to be mildly dependent
 on incoming particle energy in the range of interest. 
-Greater than 90\% background rejection can be 
-achieved with $>$70\% efficiency for energies above 300~MeV. (Above 1~GeV 
-rejection is even greater at high efficiency).
+%Greater than 90\% background rejection can be 
+%achieved with $>$70\% efficiency for energies above 300~MeV. (Above 1~GeV 
+%rejection is even greater at high efficiency).
 Our studies indicate that rejection and efficiency depend 
 on particular features of the geometry including wire pitch and plane 
 orientation which affect the reconstruction. 
