Correcting typos in beam run table

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -128,7 +128,7 @@ Total &6000&76&2.5M  & 286K  &18K   & 1M\\
 0.7&150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{50K} &\multicolumn{2}{|c|}{12K}\\
 1  &150&\textcolor{red}{\bf 2}&\multicolumn{2}{|c|}{70K} &\multicolumn{2}{|c|}{12K}\\
 2  &200&3&\multicolumn{2}{|c|}{135K}&\multicolumn{2}{|c|}{\textcolor{red}{\bf 6K}}\\ \hline
-Total  &1600&22&\multicolumn{2}{|c|}{400K}&\multicolumn{2}{|c|}{180}\\ 
+Total  &1600&22&\multicolumn{2}{|c|}{350K}&\multicolumn{2}{|c|}{180K}\\ 
 \hline 
 \hline
 \multicolumn{7}{|c|}{\bf Electron Sample} \\ \hline
