--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -303,7 +303,7 @@ For the case of  interacting hadrons the composition of secondaries
 will need to be determined to characterize the response. 
 These will include neutrals and particles which 
 deposit energy electromagnetically ($\pi^o$, $\gamma$), as well as
-secondary hadrons,
+secondary hadrons.
 %and their energy responses 
 The test beam with known incoming particle type and momentum will be used
 to characterize interacting hadrons in this energy range.
@@ -318,7 +318,7 @@ Interacting protons (65\% of the 1~GeV/c sample) are selected.
 %35\% which range out are be used to study particle identification algorithms (PID) (see Sec.~\ref{detbeam_pid}). 
 %Reconstruction is performed with ICARUS spatial and calorimetric reconstruction algorithm~\cite{icarus_reco}.
 For this study, visible energy is summed using hit information with corrections applied for the lifetime of 
-the drift electrons. (No attempt is made here to correct for recombination effects or electromagnetic shower fractions). 
+the drift electrons (No attempt is made to correct for recombination effects or electromagnetic shower fractions). 
 The resulting energy deposition in the two cases cannot be 
 accurately characterized by an average shower calibration factor. Monte Carlo simulations of 
 outgoing particles, especially at low energies, must be checked and bench-marked against calibration data to avoid
@@ -593,7 +593,7 @@ from the energy deposition pattern.
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/eff-bgdrej-diffen}
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/APAT600_all_norm}
   \caption{
- (left) Photon backgroun rejection % Background rejection 
+ (left) Photon background rejection % Background rejection 
 versus electron identification efficiency for various energies, calculated for sample which pass the reconstruction. 
 %The background is due to mid-identified photons.
 The simulation was performed in APA design configuration (4.67~mm wire pitch, induction wires at $\pm$35.7$^{\circ}$ w.r.t. collection wires). (right) Photon background rejection versus electron identification efficiency
@@ -611,10 +611,10 @@ Electron-photon separation has been studied in LAr TPCs
 %as shown in Fig.~\ref{fig:egam1}.
 %Currently the 
 %separation efficiency is estimated to be at the level of of 95 \% (?) 
-Fig.~\ref{fig:egam} (from ~\cite{dunecdr})
+Fig.~\ref{fig:egam} 
  shows estimated photon background rejection versus electron identification efficiency using 
 simulated isotropic electron and photon event samples  with the 
-APA geometry configuration.
+APA geometry configuration ~\cite{dunecdr}.
 % and propagated thorough the 
 %event reconstruction chain 
 The results are found to be mildly dependent
