more edits -small typos

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -18,27 +18,6 @@ One of the main goals of the single-phase prototype test beam program is to perf
 needed to control and understand systematic uncertainties in DUNE oscillation measurements.
 %The program also includes measurements to support other important DUNE physics measurements as described below.
 %detector is intended to provide input necessary to reduce systematic uncertainties for oscillation measurements 
-%
-
-%Current assumptions on detector related systematic uncertainties in DUNE to achieve
-%projected sensitivities~\cite{DuneCDR} are shown in
-%%Assumptions on current level of uncertainties are shown in 
-%Table \ref{table:deterr}. These are compared with teh levels achieved in MINOS and T2K
-%appearance measurements.
-%\begin{table}[h]
-%\centering
-%\caption{Current estimated detector related  sources of uncertainty for oscillation 
-%measurements.}
-%\label{table:deterr}
-%\begin{tabular}{|l|c|c|c|l|}
-%\hline
-%\textbf{Source of uncertainty } & \textbf{MINOS} & \textbf{T2K} & \textbf{DUNE} & \textbf{Comments}  \\ \hline
-%$\nu_e$ energy scale  & 2.7\% & 2.5\% & 2\% & comment \\ \hline
-%\end{tabular}
-%\end{table}
-%% THIS IS FROM TABLE 3.8 of CDR
-
-
 As an example of the importance of controlling detector related uncertainties,
 Fig.~\ref{fig:spectraleffect} shows the effect of a lepton energy scale 
 shift of -5\% on the measured 
@@ -124,7 +103,7 @@ LAr TPC technology was first proposed for use in neutrino experiments by C. Rubb
 %operating in the CNGS beamline  (with mean beam energy $\sim$17 GeV)~\cite{ICARUSmain}. 
 The ICARUS T600 detector~\cite{icarus_mainref} pioneered the first large-scale detector when it operated in the CNGS 
 neutrino beam at mean energy $\sim$17 GeV. ArgoNeuT~\cite{argoneut1}\cite{argoneut2} recently studied 
-neutrino interactions in the NuMI beam down to sub-GeV energies with a small-scale (170~l fiducial volume) detector. 
+neutrino interactions in the NuMI beam down to sub-GeV energies with a small-scale (175~l fiducial volume) detector. 
 While these samples are proving useful, they do not allow full isolation of
 the low energy neutrino interaction processes
 and final states from reconstruction and detector effects. 
@@ -711,8 +690,8 @@ A sample of 13K beam kaons with 1~GeV/c momentum are requested to provide 2K sto
 A sizable sample of protons ($\sim 10^6$)
 are requested to study the possible background contributions to  $p \rightarrow K^+ \overline{\nu}$.
 This sample of  protons are needed to quantify the possibility that an interacting proton 
-is  {\em mis-IDed} as stopping kaon. A proton interaction which produces neutrals and one charged pion 
-(which is mis-IDed or subsequently decays to $\mu$) can fake the final state kaon signal.
+is  misidentified as stopping kaon. A proton interaction which produces neutrals and one charged pion 
+(which is misidentified or subsequently decays to $\mu$) can fake the final state kaon signal.
 
 
 \subsubsection{Anti-proton annihilation }
