Fixing the label for Fig. 1

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -32,8 +32,8 @@ $\delta_{CP}$ phase.
 \centering
 %\includegraphics[width=0.7\textwidth,height=7.7cm]{figures/lepbias10}
 \includegraphics[width=0.7\textwidth,height=7.7cm]{figures/CSPP_LeptonBias_nue_app_FHC}
-\label{fig:spectraleffect}
-  \caption{DUNE $\nu_e$ appearance signal and background spectra. 
+
+  \caption{\label{fig:spectraleffect} DUNE $\nu_e$ appearance signal and background spectra. 
 Solid curves show the effect of -5\% lepton energy scale shift on the 
 measured appearance $\nu_e$ and $\overline{\nu}_e$ signals assuming $\delta_{CP}=0$.
 The crosses show the expected signal shape for $\delta_{CP}=+\pi/2$ (lower crosses) and -$\pi/2$  (upper crosses). 
